파입 업로드, 삭제 기능 구현. (다운로드 구현 남아있음)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,17 @@ spring.datasource.url = jdbc:postgresql://localhost:5433/fmb?charSet=utf-8&prepa
 spring.datasource.username = postgres
 spring.datasource.password = 123456
  
+#image.server.context = /imageserver/
+#image.server.repository = /Users/mffiles/imageserver/
+#file.repository = /Users/edwinj0326/Desktop/miflow-file-temp/
+#root.divison = fmb-server-image
+file.repository = /Users/edwinj0326/Desktop/file-temp/
+root.divison = fmb-server-image
+#google-cloud-storage.enabled = false
+encoding = 7bit
+
+spring.resources.static-locations=classpath:/resources/,classpath:/static/
+
 #logging.level.org.ms=info
 # 
 #spring.jpa.hibernate.ddl-auto=update
