--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port: 8090
 
-spring.datasource.url = jdbc:postgresql://localhost:5433/fmb?charSet=utf-8&prepareThreshold=1
+spring.datasource.url = jdbc:postgresql://great.smartworks.net:5432/fmb?charSet=utf-8&prepareThreshold=1
 spring.datasource.username = postgres
-spring.datasource.password = 123456
+spring.datasource.password = sm@rtw0rks5great
  
 #logging.level.org.ms=info
 # 
