attachment download 기능 완료 + class 설명

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,10 @@ root.divison = fmb-server-image
 #google-cloud-storage.enabled = false
 encoding = 7bit
 
-spring.resources.static-locations=classpath:/resources/,classpath:/static/
+#spring.resources.static-locations=classpath:/resources/,classpath:/static/
+
+spring.servlet.multipart.maxFileSize=10MB
+spring.servlet.multipart.maxRequestSize=10MB
 
 #logging.level.org.ms=info
 # 
