--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,9 @@ server.port: 8090
 spring.datasource.url = jdbc:postgresql://great.smartworks.net:5432/fmb?charSet=utf-8&prepareThreshold=1
 spring.datasource.username = postgres
 spring.datasource.password = sm@rtw0rks5great
+#spring.datasource.url = jdbc:postgresql://localhost:5433/fmb?charSet=utf-8&prepareThreshold=1
+#spring.datasource.username = postgres
+#spring.datasource.password = 123456
  
 file.repository = /Users/edwinj0326/Desktop/file-temp/
 root.divison = fmb-server-image
