ORACLE 변환 작업 완료. (Board, Font, Attachment)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,20 @@
 server.port: 8090
 
-spring.datasource.url = jdbc:postgresql://great.smartworks.net:5432/fmb?charSet=utf-8&prepareThreshold=1
-spring.datasource.username = postgres
-spring.datasource.password = sm@rtw0rks5great
+#spring.datasource.url = jdbc:postgresql://great.smartworks.net:5432/fmb?charSet=utf-8&prepareThreshold=1
+#spring.datasource.username = postgres
+#spring.datasource.password = sm@rtw0rks5great
 #spring.datasource.url = jdbc:postgresql://localhost:5433/fmb?charSet=utf-8&prepareThreshold=1
 #spring.datasource.username = postgres
 #spring.datasource.password = 123456
+
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@192.168.0.29:1521
+spring.datasource.username = AIROV
+spring.datasource.password = oracle
+spring.datasource.hikari.connection-timeout=60000
+spring.datasource.hikari.maximum-pool-size=5
  
 file.repository = /Users/edwinj0326/Desktop/file-temp/
 root.divison = fmb-server-image
