Connection, scenario Update 및 Connection engine 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,8 @@ server.port: 8090
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@192.168.0.29:1521
-spring.datasource.username = AIROV
+spring.datasource.url=jdbc:oracle:thin:@master.smartworks.net:1521
+spring.datasource.username = AIROV2
 spring.datasource.password = oracle
 spring.datasource.hikari.connection-timeout=60000
 spring.datasource.hikari.maximum-pool-size=5
