Oracle / Connection 자동실행 및 connect, disconnect 완료

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,8 @@ server.port: 8090
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@master.smartworks.net:1521
 spring.datasource.username = AIROV2
