Connection & Scenario <--> FMB Client 이슈 1차 해결

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port: 8090
+server.port: 8077
 
 #spring.datasource.url = jdbc:postgresql://great.smartworks.net:5432/fmb?charSet=utf-8&prepareThreshold=1
 #spring.datasource.username = postgres
@@ -9,9 +9,8 @@ server.port: 8090
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+#spring.datasource.url=jdbc:oracle:thin:@10.250.111.58:1521:oracle19
 spring.datasource.url=jdbc:oracle:thin:@master.smartworks.net:1521
 spring.datasource.username = AIROV2
 spring.datasource.password = oracle
