--- a/pom.xml
+++ b/pom.xml
@@ -32,11 +32,6 @@
 		<!-- <dependency>
 		    <groupId>com.oracle</groupId>
 		    <artifactId>ojdbc6</artifactId>
-		    <version>11.2.0.3</version>
-		</dependency> -->
-		<!-- <dependency>
-		    <groupId>com.oracle</groupId>
-		    <artifactId>ojdbc6</artifactId>
 		    <version>11.2.0.1.0</version>
 	    </dependency> -->
 	    <dependency>
@@ -44,11 +39,11 @@
 	      	<artifactId>ojdbc8</artifactId>
 	      	<version>19.3.0.0</version>
 	    </dependency>
-		<!-- <dependency>
-			<groupId>com.oracle.database.jdbc</groupId>
-			<artifactId>ojdbc8</artifactId>
-			<scope>runtime</scope>
-		</dependency> -->
+	    <dependency>
+	      	<groupId>com.oracle.ojdbc</groupId>
+	      	<artifactId>orai18n</artifactId>
+	      	<version>19.3.0.0</version>
+	    </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -81,11 +76,11 @@
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 		</dependency> -->
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
 			<version>20180813</version>
-	    </dependency>
+	    </dependency> -->
 	    <dependency>
 			<groupId>com.googlecode.json-simple</groupId>
 			<artifactId>json-simple</artifactId>
