FMB Server별 Scenario 관리 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.datasource.password = oracle
 spring.datasource.hikari.connection-timeout=60000
 spring.datasource.hikari.maximum-pool-size=5
 
+fmb.key = FMB1
 file.repository = /Users/edwinj0326/Desktop/file-temp/
 #file.repository = /home/fmsim-develop/fmb_automation/file-temp/
 root.divison = fmb-server-image
