Scenario 각 서버별 스케줄링, 기타정보 업데이트

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,9 @@ spring.datasource.password = oracle
 spring.datasource.hikari.connection-timeout=60000
 spring.datasource.hikari.maximum-pool-size=5
 
-fmb.key = FMB1
+fmb.self.key = FMB1
+fmb.main.key = FMB1
+fmb.secondary.key = FMB2
 file.repository = /Users/edwinj0326/Desktop/file-temp/
 #file.repository = /home/fmsim-develop/fmb_automation/file-temp/
 root.divison = fmb-server-image
